--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Curso HTML e CSS </title>
+</head>
+<body>
+    <h1> Workshop Git e Github 2 </h1>
+    <p> Diego Elias Rezende </p>
+    <p> Analista de operações </p>
+</body>
+</html>
