--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Workshop Git e Github 2 </h1>
+    <h2> Subtítulo </h2>
     <p> Diego Elias Rezende </p>
     <p> Analista de operações </p>
 </body>
