--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1> Workshop Git e Github 2 </h1>
     <h2> Subtítulo </h2>
     <p> Diego Elias Rezende </p>
-    <p> Analista de operações </p>
+    <p> Analista de operações TOOLS </p>
 </body>
 </html>
